tests/sema/fail/v38_fail_function_tail_expr.ep
# COMPILE_FAIL_CONTAINS: function must return i64 on all paths

fun answer(): i64 {
    42
}

fun main(): void {
}
